[gd_scene load_steps=5 format=3 uid="uid://etyvaymab4cr"]

[ext_resource type="Script" uid="uid://bo04687fejche" path="res://scripts/formation_grid.gd" id="1_o5qli"]
[ext_resource type="Script" uid="uid://df7lysb01onef" path="res://scripts/ui/soldier_detail_panel.gd" id="2_0wfyh"]
[ext_resource type="Script" uid="uid://b80afbbm85b8y" path="res://scripts/ui/relationship_tab.gd" id="3_sugp2"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0wfyh"]
bg_color = Color(0, 0, 0, 0.313726)

[node name="Main" type="Node2D"]

[node name="Background" type="ColorRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.168627, 0.168627, 0.168627, 1)

[node name="FormationGrid" type="Node2D" parent="."]
script = ExtResource("1_o5qli")

[node name="GridContainer" type="GridContainer" parent="FormationGrid"]
offset_right = 40.0
offset_bottom = 40.0

[node name="UI" type="CanvasLayer" parent="."]

[node name="SoldierDetailPanel" type="Panel" parent="UI"]
offset_left = 100.0
offset_top = 100.0
offset_right = 450.0
offset_bottom = 600.0
theme_override_styles/panel = SubResource("StyleBoxFlat_0wfyh")
script = ExtResource("2_0wfyh")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="NameLabel" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 18

[node name="NationalityLabel" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="AgeLabel" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="TabContainer" type="TabContainer" parent="UI/SoldierDetailPanel/VBoxContainer"]
layout_mode = 2
current_tab = 0

[node name="Stats" type="Panel" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer"]
layout_mode = 2
metadata/_tab_index = 0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Stats"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="StatsContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Stats/VBoxContainer"]
layout_mode = 2

[node name="TraitsContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Stats/VBoxContainer"]
layout_mode = 2

[node name="Relationships" type="Panel" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("3_sugp2")
metadata/_tab_index = 1

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FriendsContainer" type="PanelContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer"]
layout_mode = 2

[node name="Friends" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer/FriendsContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer/FriendsContainer"]
layout_mode = 2

[node name="RivalsContainer" type="PanelContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer"]
layout_mode = 2

[node name="Rivals" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer/RivalsContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer/RivalsContainer"]
layout_mode = 2

[node name="NeutralContainer" type="PanelContainer" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="UI/SoldierDetailPanel/VBoxContainer/TabContainer/Relationships/VBoxContainer/NeutralContainer"]
layout_mode = 2
text = "Neutral: 0"
